--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js"
+    "start": "nodemon src/index.js",
+    "swagger": "node src/swagger.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -19,5 +20,9 @@
     "mongoose": "^9.1.6",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "nodemon": "^3.1.11"
+  },
+  "devDependencies": {
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
